[gd_scene load_steps=5 format=2]

[ext_resource path="res://Graphics/Map/sliders/slidercenter.png" type="Texture" id=1]
[ext_resource path="res://Elements/Objects/slider.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.64184, 0.777249 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 0.970127, 8.56921 )

[node name="Slider" type="Area2D"]
script = ExtResource( 2 )

[node name="Area" type="CollisionShape2D" parent="."]
position = Vector2( 0.256107, -0.295605 )
rotation = 0.788371
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Activate" type="Area2D" parent="."]
rotation = 0.00114095

[node name="CollisionShape2D" type="CollisionShape2D" parent="Activate"]
position = Vector2( 4.14534, -3.87113 )
rotation = -0.780775
shape = SubResource( 2 )
[connection signal="body_entered" from="." to="." method="_on_Slider_body_entered"]
[connection signal="body_entered" from="Activate" to="." method="_on_Activate_body_entered"]
[connection signal="body_exited" from="Activate" to="." method="_on_Activate_body_exited"]
